@@ -2738,16 +2738,6 @@ name|IndexOptions
 operator|.
 name|DOCS_AND_FREQS_AND_POSITIONS_AND_OFFSETS
 decl_stmt|;
-name|int
-name|lastStartOffset
-init|=
-literal|0
-decl_stmt|;
-name|int
-name|lastPosition
-init|=
-literal|0
-decl_stmt|;
 comment|/*        * To assist people in tracking down problems in analysis components, we wish to write the field name to the infostream        * when we fail. We expect some caller to eventually deal with the real exception, so we don't want any 'catch' clauses,        * but rather a finally that takes note of the problem.        */
 name|boolean
 name|aborting
@@ -2836,6 +2826,8 @@ name|invertState
 operator|.
 name|position
 operator|<
+name|invertState
+operator|.
 name|lastPosition
 condition|)
 block|{
@@ -2880,6 +2872,8 @@ literal|"'"
 argument_list|)
 throw|;
 block|}
+name|invertState
+operator|.
 name|lastPosition
 operator|=
 name|invertState
@@ -2936,6 +2930,8 @@ if|if
 condition|(
 name|startOffset
 operator|<
+name|invertState
+operator|.
 name|lastStartOffset
 operator|||
 name|endOffset
@@ -2959,6 +2955,8 @@ name|endOffset
 operator|+
 literal|",lastStartOffset="
 operator|+
+name|invertState
+operator|.
 name|lastStartOffset
 operator|+
 literal|" for field '"
@@ -2972,6 +2970,8 @@ literal|"'"
 argument_list|)
 throw|;
 block|}
+name|invertState
+operator|.
 name|lastStartOffset
 operator|=
 name|startOffset
