@@ -3141,6 +3141,64 @@ block|{
 comment|//expected
 block|}
 block|}
+DECL|method|testIllegalOffsetsAcrossFieldInstances
+specifier|public
+name|void
+name|testIllegalOffsetsAcrossFieldInstances
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
+name|checkTokens
+argument_list|(
+operator|new
+name|Token
+index|[]
+block|{
+name|makeToken
+argument_list|(
+literal|"use"
+argument_list|,
+literal|1
+argument_list|,
+literal|150
+argument_list|,
+literal|160
+argument_list|)
+block|}
+argument_list|,
+operator|new
+name|Token
+index|[]
+block|{
+name|makeToken
+argument_list|(
+literal|"use"
+argument_list|,
+literal|1
+argument_list|,
+literal|50
+argument_list|,
+literal|60
+argument_list|)
+block|}
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|expected
+parameter_list|)
+block|{
+comment|//expected
+block|}
+block|}
 DECL|method|testBackwardsOffsets
 specifier|public
 name|void
@@ -3646,6 +3704,182 @@ argument_list|()
 expr_stmt|;
 block|}
 comment|// TODO: more tests with other possibilities
+DECL|method|checkTokens
+specifier|private
+name|void
+name|checkTokens
+parameter_list|(
+name|Token
+index|[]
+name|field1
+parameter_list|,
+name|Token
+index|[]
+name|field2
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|riw
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|boolean
+name|success
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|FieldType
+name|ft
+init|=
+operator|new
+name|FieldType
+argument_list|(
+name|TextField
+operator|.
+name|TYPE_NOT_STORED
+argument_list|)
+decl_stmt|;
+name|ft
+operator|.
+name|setIndexOptions
+argument_list|(
+name|IndexOptions
+operator|.
+name|DOCS_AND_FREQS_AND_POSITIONS_AND_OFFSETS
+argument_list|)
+expr_stmt|;
+comment|// store some term vectors for the checkindex cross-check
+name|ft
+operator|.
+name|setStoreTermVectors
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|ft
+operator|.
+name|setStoreTermVectorPositions
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|ft
+operator|.
+name|setStoreTermVectorOffsets
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"body"
+argument_list|,
+operator|new
+name|CannedTokenStream
+argument_list|(
+name|field1
+argument_list|)
+argument_list|,
+name|ft
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"body"
+argument_list|,
+operator|new
+name|CannedTokenStream
+argument_list|(
+name|field2
+argument_list|)
+argument_list|,
+name|ft
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|riw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|riw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|success
+operator|=
+literal|true
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|success
+condition|)
+block|{
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|IOUtils
+operator|.
+name|closeWhileHandlingException
+argument_list|(
+name|riw
+argument_list|,
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 DECL|method|checkTokens
 specifier|private
 name|void
